added pagination for howto, suggesting post, rename category

--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -84,11 +84,11 @@
                             <label class="form-check-label" for="check5">Tour</label>
                         </div>
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="check6" value="C# & ASP.NET">
-                            <label class="form-check-label" for="check6">C# & ASP.NET</label>
+                            <input type="checkbox" class="form-check-input" id="check6" value="Developer">
+                            <label class="form-check-label" for="check6">Developer</label>
                         </div>
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="check7" value="Book Review">
+                            <input type="checkbox" class="form-check-input" id="check7" value="Book-Review">
                             <label class="form-check-label" for="check7">Book Review</label>
                         </div>
                     </div>
