--- a/My Blog Website/Views/Developer/Index.cshtml
+++ b/My Blog Website/Views/Developer/Index.cshtml
@@ -2,13 +2,13 @@
 @model IEnumerable<My_Blog_Website.Areas.Admin.Models.Posts>  // Replace with your actual Post model type
 
 @{
-    ViewData["Title"] = "C# and ASP.NET";
+    ViewData["Title"] = "For Developers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container-fluid pt-5">
     <div class="container animate-box">
-        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">All C# and ASP.NET</div>
+        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Know your stake!</div>
         
         <div class="row">
             @foreach(var post in Model)
