--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
             <div class="col-12 col-md-3 col-lg-2">
                 <div class="footer_main_title py-3"> Category</div>
                 <ul class="footer_menu">
-                    <li><a asp-controller="CSharpASPNET" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; C# & ASP.NET</a></li>
+                    <li><a asp-controller="Developer" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; For Developers</a></li>
                     <li><a asp-controller="BookReview" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Book Review</a></li>
                     <li><a asp-controller="FAQ" asp-action="Index"><i class="fa fa-angle-right"></i>&nbsp;&nbsp; FAQ</a></li>
                 </ul>
