--- a/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
@@ -78,46 +78,38 @@
         <div class="container-fluid pb-4 pt-5">
             <div class="container animate-box">
             <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Trending</div>
+                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">You may like</div>
             </div>
             <div class="owl-carousel owl-theme" id="slider2">
-            <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                @if (ViewBag.SimilarPosts != null && ViewBag.SimilarPosts.Count > 0)
+                {
+                    foreach (var similarPost in ViewBag.SimilarPosts)
+                    {
+                        <div class="item px-2">
+                            <div class="fh5co_hover_news_img">
+                                <div class="fh5co_news_img">
+                                    <img src="@similarPost.FeatureImageUrl" alt="@similarPost.Title" />
+                                </div>
+                                <div>
+                                    <a href="/@similarPost.Categories/@similarPost.Slug" class="d-block fh5co_small_post_heading">
+                                        <span>@similarPost.Title</span>
+                                    </a>
+                                    <div class="c_g">
+                                        <i class="fa fa-clock-o"></i> 
+                                        @similarPost.PublishedDate.ToString("MMM dd, yyyy")
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <div class="col-12">
+                        <p>No related posts found in @ViewBag.CurrentCategory category.</p>
                     </div>
-                </div>
+                }
             </div>
-            <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item px-2">
-                <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
-                    </div>
-                </div>
-            </div>
-        </div>
             </div>
         </div>
     </body>
