--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -32,9 +32,12 @@
                     </div>
                     <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
                         <div class="search-box text-center d-inline-block">
-                            <input class="search-txt" type="text" name="" placeholder="Type to search" />
-                            <a class="search-btn fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
+                            <input class="search-txt" id="searchInput" type="text" placeholder="Type to search" />
+                            <a class="search-btn fh5co_display_table" id="searchBtn">
+                                <div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div>
+                            </a>
                         </div>
+
                         <div class="text-center d-inline-block">
                             <a class="fh5co_display_table" href="https://www.linkedin.com/in/radipu/" target="_blank"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
                         </div>
