--- a/My Blog Website/Views/Home/Index.cshtml
+++ b/My Blog Website/Views/Home/Index.cshtml
@@ -197,7 +197,7 @@
 }
 
 <!-- HowTo Section -->
-    @if(Model.HowTo != null && Model.HowTo.Any())
+@if(Model.HowTo != null && Model.HowTo.Any())
     {
         <div class="container-fluid pb-4 pt-4 paddding">
             <div class="container paddding">
@@ -240,18 +240,17 @@
                         </div>
                         <div class="clearfix"></div>
                         <div class="fh5co_tags_all">
-                            <a href="#" class="fh5co_tagg">Business</a>
-                            <a href="#" class="fh5co_tagg">Technology</a>
-                            <a href="#" class="fh5co_tagg">Sport</a>
-                            <a href="#" class="fh5co_tagg">Art</a>
-                            <a href="#" class="fh5co_tagg">Lifestyle</a>
-                            <a href="#" class="fh5co_tagg">Three</a>
-                            <a href="#" class="fh5co_tagg">Photography</a>
-                            <a href="#" class="fh5co_tagg">Lifestyle</a>
-                            <a href="#" class="fh5co_tagg">Art</a>
-                            <a href="#" class="fh5co_tagg">Education</a>
-                            <a href="#" class="fh5co_tagg">Social</a>
-                            <a href="#" class="fh5co_tagg">Three</a>
+                            @if (Model.Tags != null && Model.Tags.Any())
+                            {
+                                @foreach (var tag in Model.Tags)
+                                {
+                                    <a href="" class="fh5co_tagg">@tag</a>
+                                }
+                            }
+                            else
+                            {
+                                <p>No tags available.</p>
+                            }
                         </div>
                         <div>
                             <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
