added post description

--- a/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Create.cshtml
@@ -32,6 +32,8 @@
                 <input type="text" class="title-input" placeholder="Post title" 
                        asp-for="Title" id="post_title" />
                 <textarea id="post_text" asp-for="PostContent"></textarea>
+                <input type="text" class="description-input" placeholder="What the post about?" 
+       asp-for="PostDescription" id="post_title" />
             </div>
             <!-- Sidebar -->
             <div id="rightsidebar" class="collapsed">
